@@ -5,6 +5,9 @@ Changelog
 4.1.0 (unreleased)
 ------------------
 
+- Added new mail workflow state `mail-state-removed`.
+  [phgross]
+
 - Add new action `Remove` to trash tab and add remove confirmation view.
   [phgross]
 
